test_suite/tests/ui/borrow/wrong_lifetime.stderr
error: field `s` does not have lifetime 'b
  --> $DIR/wrong_lifetime.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

